apps/welcome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome
  labels:
    app: welcome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
        - name: welcome
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
