apps/welcome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome
spec:
  type: ClusterIP
  selector:
    app: welcome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
