apps/welcome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - welcome.sanderdewitte.com
      secretName: welcome-sanderdewitte-com-tls
  rules:
    - host: welcome.sanderdewitte.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome
                port:
                  number: 80
